package sample.models;

public enum EntityType {
    PLAYER,
    ENEMY
}
