package sample.models;

public class Goblin extends Entity {
    public Goblin() {
        super(60, 5, (float) 0.2, "Goblin");
    }
}
