package sample.models;

public class Wizard extends Entity {
    public Wizard() {
        super(80, 15, (float) 0.3, "Wizard");
    }
}
